body horizontal scroll fix

--- a/src/sass/components/_videos.scss
+++ b/src/sass/components/_videos.scss
@@ -1,5 +1,6 @@
 .videos {
   height: 1536px;
+  overflow-x: clip;
 }
 .video-gallery {
   position: relative;
